<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:id="@+id/list"
    android:visibility="gone"
    >

    <!-- content header line -->
    <RelativeLayout

        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/bgContentTop"
        android:paddingLeft="12dp"
        android:paddingTop="7dp"
        android:paddingRight="12dp"
        android:paddingBottom="7dp">


        <ImageView
            android:id="@+id/close"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:src="@drawable/menu_icon" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/service_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true">

        </androidx.appcompat.widget.AppCompatTextView>

    </RelativeLayout>

    <!-- content header image -->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <com.google.android.gms.maps.MapView
            android:id="@+id/mapView"
            android:name="com.google.android.gms.maps.SupportMapFragment"
            android:layout_width="match_parent"
            android:layout_height="160dp"

            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_centerHorizontal="true">

        </com.google.android.gms.maps.MapView>


        <TextView
            android:id="@+id/pos"
            style="@style/ContentImageBadgeText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@id/mapView"
            android:layout_centerHorizontal="true"
            android:paddingBottom="10dp"
            android:text="@string/pledge_mock"
            android:visibility="gone" />


        <ImageView
            android:id="@+id/view_more"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:background="@android:color/white"
            android:src="@drawable/arrow" />

    </RelativeLayout>

    <!-- content body layout -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:background="@color/bgContent"
        android:orientation="vertical"
        android:paddingLeft="20dp"
        android:paddingTop="9dp"
        android:paddingRight="20dp"
        android:paddingBottom="6dp">

        <!-- avatar and name part -->
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/content_avatar_title"
                style="@style/ContentMainBadgeTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:layout_marginBottom="5dp"
                android:text="Request Content:" />

            <ImageView
                android:id="@+id/request_image"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_below="@+id/content_avatar_title"
                android:layout_marginTop="10dp"
                android:background="@drawable/circle_border"
                android:scaleType="centerCrop"
                android:src="@drawable/avatar">

            </ImageView>


            <TextView
                android:id="@+id/request_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignTop="@id/request_image"
                android:layout_marginStart="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginBottom="2dp"
                android:layout_toEndOf="@id/request_image"
                android:layout_toRightOf="@id/request_image"
                android:text="@string/client_name_mock"
                android:textColor="@color/mainTextColor"
                android:textSize="18sp"
                android:textStyle="bold" />


            <TextView
                android:id="@+id/description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/request_title"
                android:layout_alignStart="@id/request_title"
                android:layout_alignLeft="@id/request_title"
                android:layout_marginStart="3dp"

                android:layout_marginLeft="3dp"
                android:layout_marginBottom="-2dp"
                android:text="description"
                android:textColor="@color/contentBadgeTitle"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/click_images"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/description"
                android:layout_marginStart="10dp"
                android:layout_marginTop="20dp"
                android:layout_toRightOf="@id/request_image"
                android:fontFamily="sans-serif"
                android:gravity="center"
                android:text="Click here  to view Images"
                android:textColor="@color/headings">

            </TextView>


        </RelativeLayout>

        <!-- divider line -->
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="9dp"
            android:layout_marginBottom="6dp"
            android:src="@color/contentDividerLine" />

        <!-- addresses part -->


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:baselineAligned="false"
            android:orientation="horizontal">

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <TextView
                    android:id="@+id/content_from_badge"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentLeft="true"
                    android:textStyle="bold"
                    android:text="Address:" />

                <TextView
                    android:id="@+id/state_txt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/content_from_badge"
                    android:text="State:">

                </TextView>

                <TextView
                    android:id="@+id/client_state"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/content_from_badge"

                    android:layout_marginStart="5dp"
                    android:layout_toRightOf="@id/state_txt"
                    android:text="Statetee"
                    android:textColor="@color/mainTextColor"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/street_txt"
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:layout_below="@+id/state_txt"
                    android:layout_marginTop="8dp"
                    android:text="Street:">

                </TextView>

                <TextView
                    android:id="@+id/client_street"
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:layout_below="@+id/state_txt"
                    android:layout_marginStart="5dp"
                    android:layout_marginTop="8dp"
                    android:layout_toRightOf="@id/street_txt"
                    android:text="@string/content_from2_mock"
                    android:textColor="@color/mainTextColor"
                    android:textSize="14sp" />

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/parent_relative"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <TextView
                    android:id="@+id/building_txt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="14dp"
                    android:text="Building:">

                </TextView>

                <TextView
                    android:id="@+id/building_namee"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="4dp"
                    android:layout_marginTop="12dp"
                    android:layout_toRightOf="@+id/building_txt"

                    android:text="Building"
                    android:textColor="@color/mainTextColor"
                    android:textSize="14sp">

                </TextView>

                <TextView
                    android:id="@+id/floor_txt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/building_txt"
                    android:layout_marginTop="8dp"
                    android:text="Floor #:">

                </TextView>

                <TextView
                    android:id="@+id/floor_number"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/building_namee"
                    android:layout_marginStart="4dp"
                    android:layout_marginTop="8dp"
                    android:layout_toRightOf="@id/floor_txt"

                    android:text="floor number"
                    android:textColor="@color/mainTextColor"
                    android:textSize="14sp">

                </TextView>
            </RelativeLayout>

        </LinearLayout>



        <!-- divider line -->
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="7dp"
            android:layout_marginBottom="6dp"
            android:src="@color/contentDividerLine" />

        <!-- dates part -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:baselineAligned="false"
            android:orientation="horizontal">

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <TextView
                    android:id="@+id/request_from"
                    style="@style/ContentMainBadgeTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentLeft="true"
                    android:text="from" />

                <TextView
                    android:id="@+id/content_from_time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/request_from"
                    android:layout_alignStart="@id/request_from"
                    android:layout_alignLeft="@id/request_from"
                    android:text="@string/delivery_time_mock"
                    android:textColor="@color/mainTextColor"
                    android:textSize="18sp"
                    android:textStyle="bold" />


            </RelativeLayout>

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <TextView
                    android:id="@+id/request_to_text"
                    style="@style/ContentMainBadgeTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentLeft="true"
                    android:text="@string/deadline_badge" />

                <TextView
                    android:id="@+id/request_to_time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/request_to_text"
                    android:layout_alignStart="@id/request_to_text"
                    android:layout_alignLeft="@id/request_to_text"
                    android:text=" 10:30 pm"
                    android:textColor="@color/mainTextColor"
                    android:textSize="18sp"
                    android:textStyle="bold" />

            </RelativeLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:baselineAligned="false"
            android:orientation="horizontal">

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <TextView
                    android:id="@+id/request_accept_btn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="10dp"
                    android:background="@android:color/holo_green_light"
                    android:padding="10dp"
                    android:text="Accept"
                    android:textAlignment="center"
                    android:textColor="@color/mainTextColor"
                    android:textSize="20sp" />


            </RelativeLayout>

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <TextView
                    android:id="@+id/request_reject_btn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"

                    android:layout_marginStart="10dp"
                    android:layout_marginTop="16dp"
                    android:background="@android:color/holo_red_light"
                    android:padding="10dp"
                    android:text="@string/request_btn_text"
                    android:textAlignment="center"
                    android:textColor="@color/mainTextColor"
                    android:textSize="20sp" />

            </RelativeLayout>

        </LinearLayout>
        <!-- request button -->


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:text="You have 30 minutes to reply "
            android:textAlignment="center"
            android:textColor="@color/contentBadgeTitle"
            android:textSize="12sp" />

    </LinearLayout>

</LinearLayout>